--- a/ResolvR/appsettings.json
+++ b/ResolvR/appsettings.json
@@ -1,9 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "",
+          "tableName": "Logs",
+          "schemaName": "dbo",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ]
   },
   "AllowedHosts": "*"
 }
